# ESM3-Adapters

./: README.md  pyproject.toml
Scripts/: ESM3_fullmodel_finetune.py  esm3_inference.py  esm3_lora.py  imp_mutations.py  make_fasta.py  offline_save.py  tokenize_darpins.py  visualize_mutations.py
conf/: config.yaml  finetune.yaml  inference.yaml
conf/lora/: default.yaml
src/cookbook/snippets/: esm3.py  esmc.py  fold_invfold.py
src/cookbook/tutorials/: 3_gfp_design.ipynb  5_guided_generation.ipynb
src/esm/: data.py
src/esm/models/: esm3.py  esmc.py  vqvae.py
src/esm/sdk/: api.py  forge.py  sagemaker.py
src/esm/tokenization/: function_tokenizer.py
src/esm/utils/: encoding.py  generation.py  sampling.py  validation.py
src/esm/utils/function/: encode_decode.py  tfidf.py
src/esm/utils/structure/: affine3d.py  protein_chain.py  protein_complex.py
src/esm/widgets/components/: sasa_prompt_selector.py  secondary_structure_prompt_selector.py  sequence_prompt_selector.py  structure_prompt_selector.py
